05-cert-manager/test-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ssl
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - whoami.172.16.16.101.sslip.io
    secretName: whoami-tls-secret
  rules:
    - host: whoami.172.16.16.101.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
